--- a/.github/workflows/syntax.yml
+++ b/.github/workflows/syntax.yml
@@ -1,10 +1,7 @@
 name: Check Syntax
 on:
   workflow_dispatch:
-  pull_request_target:
-      branches:
-        - main
-        - development
+  pull_request:
   push:
 
 concurrency:
