--- a/.github/workflows/compileproject.yml
+++ b/.github/workflows/compileproject.yml
@@ -85,7 +85,7 @@ jobs:
 
       - name: Verify Files
         run: |
-          ls -la
+          ls -la Compile-Results/
 
       - name: Extract release notes
         id: extract-release-notes
@@ -96,7 +96,7 @@ jobs:
   
       - name: Verify Files
         run: |
-          ls -la
+          ls -la Compile-Results/
           cat Compile-Results/CHANGELOG.md
           cat Compile-Results/RELEASE_NOTES.md
           
