--- a/.github/workflows/compileproject.yml
+++ b/.github/workflows/compileproject.yml
@@ -50,7 +50,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          configuration: "configuration_complex.json"
+          configuration: "${{ github.workspace }}/.github/configure-notes.json"
           outputFile: ${{ github.workspace }}/CHANGELOG.md
           fromTag: "v2.1.0"
           toTag: "v110"
