Updating workflow with release config

--- a/.github/configure-notes.json
+++ b/.github/configure-notes.json
@@ -5,7 +5,7 @@
         "labels": ["feature"]
       },
       {
-        "title": "## :page_with_curl Documentation",
+        "title": "## :books: Documentation",
         "labels": ["documentation"]
       },
       {
