--- a/.github/workflows/release-notes.yml
+++ b/.github/workflows/release-notes.yml
@@ -24,10 +24,9 @@ jobs:
     - name: Upload Release Notes to Wiki
       uses: docker://decathlon/wiki-page-creator-action:latest
       env:
-        ACTION_MAIL: release@users.noreply.github.com
-        ACTION_NAME: release
+        ACTION_MAIL: skoona@gmail.com
+        ACTION_NAME: skoona
         GH_PAT: ${{ secrets.GITHUB_TOKEN }}
         MD_FOLDER: temp_release_notes
-        OWNER: skoona
         REPO_NAME: 4DExplorer
         SKIP_MD: README.md
