--- a/.github/workflows/release-notes.yml
+++ b/.github/workflows/release-notes.yml
@@ -2,6 +2,11 @@
 name: Milestone Closure
 on:
   workflow_dispatch:
+    inputs:
+      milestoneId:
+        description: 'Milestone ID'     
+        required: true
+        default: '1'
   milestone:
     types: [closed]
 
@@ -16,13 +21,13 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         OUTPUT_FOLDER: temp_release_notes
         USE_MILESTONE_TITLE: "true"
+
     - name: Upload Release Notes to Wiki
       uses: docker://decathlon/wiki-page-creator-action:latest
       env:
-        ACTION_MAIL: release@users.noreply.github.com
-        ACTION_NAME: release
-        GH_PAT: ${{ secrets.GITHUB_TOKEN }}
+        ACTION_MAIL: skoona@gmail.com
+        ACTION_NAME: skoona
+        GH_PAT: ${{ secrets.GH_PAT }}
         MD_FOLDER: temp_release_notes
-        OWNER: skoona
         REPO_NAME: 4DExplorer
         SKIP_MD: README.md
