--- a/.github/configure-notes.json
+++ b/.github/configure-notes.json
@@ -5,7 +5,7 @@
         "labels": ["feature"]
       },
       {
-        "title": "## :books: Documentation",
+        "title": "## 📖 Documentation",
         "labels": ["documentation"]
       },
       {
@@ -40,7 +40,7 @@
       "order": "ASC",
       "on_property": "mergedAt"
     },
-    "template": "#{{CHANGELOG}}\n\n## Skoona Consulting\n\n<details>\n<summary>Uncategorized</summary>\n\n#{{UNCATEGORIZED}}\n</details>",
+    "template": "# Skoona Consulting \n\n#{{CHANGELOG}}\n\n<details>\n<summary>Uncategorized</summary>\n\n#{{UNCATEGORIZED}}\n</details>",
     "pr_template": "- #{{TITLE}}\n   - PR: ##{{NUMBER}}",
     "empty_template": "- no changes",
     "label_extractor": [
