Pause Release notes for now

--- a/.github/workflows/compileproject.yml
+++ b/.github/workflows/compileproject.yml
@@ -57,14 +57,13 @@ jobs:
         with:
           configuration: "${{ github.workspace }}/.github/configure-notes.json"
           outputFile: ${{ github.workspace }}/CHANGELOG.md
-          fromTag: "v2.1.0"
-          toTag: "v2.2.0"
           token: ${{ secrets.GH_PAT }}
+          # fromTag: "v2.1.0"
+          # toTag: "v2.2.0"
 
       - name: Verify Files
         run: |
           ls -la
-          cat CHANGELOG.md
             
       - uses: actions/upload-artifact@v4.3.1
         name: Upload Artifacts
@@ -110,9 +109,6 @@ jobs:
       - name: Verify Files
         run: |
           ls -la
-          ls -la Compile-Results/
-          cat ${{ steps.release-notes.outputs }}
-          cat Compile-Results/CHANGELOG.md
           
       - name: Archive Release
         uses: thedoctor0/zip-release@0.7.5
