--- a/.github/workflows/compileproject.yml
+++ b/.github/workflows/compileproject.yml
@@ -89,6 +89,8 @@ jobs:
     steps:      
       - name: 'Download Build Artifacts'
         uses: actions/download-artifact@v4.1.4
+        with:
+          name: Compile-Results
 
       # - name: Extract release notes
       #   id: extract-release-notes
