--- a/.github/workflows/compileproject.yml
+++ b/.github/workflows/compileproject.yml
@@ -91,6 +91,7 @@ jobs:
         uses: actions/download-artifact@v4.1.4
         with:
           name: Compile-Results
+          path: Compile-Results
 
       # - name: Extract release notes
       #   id: extract-release-notes
