--- a/.github/workflows/compileproject.yml
+++ b/.github/workflows/compileproject.yml
@@ -124,7 +124,7 @@ jobs:
         uses: softprops/action-gh-release@v2.0.4
         with:
           generate_release_notes: true
-          body_path: ${{ github.workspace }}/CHANGELOG.md
+          # body_path: ${{ github.workspace }}/CHANGELOG.md
           files: 'Contacts-R${{ github.run_number }}.zip'
           tag_name: v1.${{ github.run_number }}
           name: Release V1.${{ github.run_number }}
